@@ -14,3 +14,4 @@
     { "loglevel", HAS_ARG, {(void*)opt_loglevel}, "set libav* logging level", "loglevel" },
     { "v", HAS_ARG, {(void*)opt_loglevel}, "set libav* logging level", "loglevel" },
     { "debug", HAS_ARG, {(void*)opt_codec_debug}, "set debug flags", "flags" },
+    { "report", 0, {(void*)opt_report}, "generate a report" },
