@@ -123,6 +123,16 @@ the environment variable @env{FFMPEG_FORCE_COLOR}.
 The use of the environment variable @env{NO_COLOR} is deprecated and
 will be dropped in a following FFmpeg version.
 
+@item -report
+Dump full command line and console output to a file named
+@code{@var{program}-@var{YYYYMMDD}-@var{HHMMSS}.log} in the current
+directory.
+This file can be useful for bug reports.
+It also implies @code{-loglevel verbose}.
+
+Note: setting the environment variable @code{FFREPORT} to any value has the
+same effect.
+
 @end table
 
 @section AVOptions
